# KOC-program

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  docker-compose.full.yml
agent/: Dockerfile  README.md  pyproject.toml
agent/app/: __init__.py  main.py
agent/app/api/: __init__.py  routes.py
agent/app/core/: __init__.py  config.py  errors.py
agent/app/orchestration/: __init__.py  agent_orchestrator.py
agent/app/prompts/: loader.py
agent/app/responses/: __init__.py  mock_response_loader.py
agent/app/router/: __init__.py  task_router.py
agent/app/runtime/: __init__.py  base.py  gemini_runtime.py  mock_runtime.py
agent/app/schemas/: __init__.py  agent.py  common.py  debug.py  jobs.py  tools.py
agent/app/static/: prompt-lab.html
agent/app/tools/: __init__.py  agent_memory.py  context_provider.py  mock_retrieval.py  registry.py  retrieval.py  web_search.py
agent/app/workflows/: __init__.py  base.py  content_writing.py  general_chat.py  persona.py  trend_tracking.py
agent/tests/: conftest.py  test_agent_full_flow.py  test_agent_orchestrator.py  test_human_voice_skill.py  test_mock_retrieval.py  test_model_base_url.py  test_reserved_interfaces.py  test_retrieval_before_generation.py  test_runtime_selection.py  test_service_shell.py  test_task_router.py  test_web_search_contract.py
backend/: .dockerignore  Dockerfile  requirements-test.txt  requirements.txt
deploy/: ssh_exec.py
docs/: README.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
tools/: docker_queue.py  (+2 more)
(+196 files in other folders)
